fixed overflow issue

--- a/assets/styles/pages/settings.scss
+++ b/assets/styles/pages/settings.scss
@@ -16,6 +16,7 @@
   align-items: center;
   text-align: left;
   padding-inline: 24px;
+  overflow: auto;
 }
 
 .equalizer {
